Added simple and strategic projects to work on the quality of the generated code. #105

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -16,6 +16,8 @@
 		<module>issues</module>
 		<module>JAXB-1058</module>
 		<module>one</module>
+		<module>qa-simple</module>
+		<module>qa-strategic</module>
 		<module>simple-hashCode-equals-01</module>
 		<module>simplify-01</module>
 		<module>superclass</module>
