--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.jvnet.jaxb2_commons</groupId>
 	<artifactId>jaxb2-basics-project</artifactId>
 	<packaging>pom</packaging>
-	<version>0.12.1-SNAPSHOT</version>
+	<version>3.0.0-SNAPSHOT</version>
 	<name>JAXB2 Basics - Project</name>
 	<url>https://github.com/highsource/jaxb2-basics</url>
 	<description>JAXB2 Basics is a part of JAXB2 Commons project which implements plugins and tools for JAXB 2.x reference implementation.</description>
@@ -138,7 +138,7 @@
 	</profiles>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jaxb.version>3.0.0-M4</jaxb.version>
+		<jaxb.version>3.0.2</jaxb.version>
 		<activation.version>1.2.0</activation.version>
 		<maven-jaxb2-plugin.version>0.14.0</maven-jaxb2-plugin.version>
 		<cxf-codegen-plugin.version>3.2.4</cxf-codegen-plugin.version>
@@ -212,7 +212,7 @@
 			<dependency>
 				<groupId>jakarta.xml.bind</groupId>
 				<artifactId>jakarta.xml.bind-api</artifactId>
-				<version>3.0.0-RC3</version>
+				<version>3.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.glassfish.jaxb</groupId>
@@ -230,9 +230,9 @@
 				<version>${jaxb.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.sun.activation</groupId>
-				<artifactId>javax.activation</artifactId>
-				<version>${activation.version}</version>
+				<groupId>jakarta.activation</groupId>
+				<artifactId>jakarta.activation-api</artifactId>
+				<version>2.0.1</version>
 			</dependency>
 			<!-- JUnit -->
 			<dependency>
