--- a/tests/episodes/b/pom.xml
+++ b/tests/episodes/b/pom.xml
@@ -21,8 +21,8 @@
 		<defaultGoal>test</defaultGoal>
 		<plugins>
 			<plugin>
-				<groupId>com.evolvedbinary.maven.jvnet</groupId>
-				<artifactId>jaxb30-maven-plugin</artifactId>
+				<groupId>org.jvnet.jaxb</groupId>
+				<artifactId>jaxb3-maven-plugin</artifactId>
 				<configuration>
 					<extension>true</extension>
 					<args>
