--- a/tests/superclass/b/pom.xml
+++ b/tests/superclass/b/pom.xml
@@ -22,8 +22,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.evolvedbinary.maven.jvnet</groupId>
-			<artifactId>jaxb-maven-plugin-testing</artifactId>
+			<groupId>org.jvnet.jaxb</groupId>
+			<artifactId>jaxb3-maven-plugin-testing</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -31,8 +31,8 @@
 		<defaultGoal>test</defaultGoal>
 		<plugins>
 			<plugin>
-				<groupId>com.evolvedbinary.maven.jvnet</groupId>
-				<artifactId>jaxb30-maven-plugin</artifactId>
+				<groupId>org.jvnet.jaxb</groupId>
+				<artifactId>jaxb3-maven-plugin</artifactId>
 				<configuration>
 					<extension>true</extension>
 					<args>
